JWT AUTH, Swagger, Special Log Instance, Mono logger with mongo db
- sanctum emoved
- Swagger Docs (Dark Mode and Authorizon Login)
- Special Log Design
- Mono logger with MongoDB worked
- Auth Design (DTO, Service Pattern, Repositor Pattern)
